finalized the user interface

--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,17 @@
 
 <body>
   <header>
-    <div class="">About Me</div>
-    <div class="">Contact</div>
-    <div class="">Projects</div>
-    <div class="">Resume</div>
+    
+    <div class=""><a href=#about>About Me</a></div>
+    <div class=""><a href=#contact>Contact</a></div>
+    <div class=""><a href=#projects>Projects</a></div>
+    <div class=""><a href=#resume>Resume</a></div>
   </header>
   <main>
-    <!-- Main content goes here -->
+
   </main>
   <footer>
-    <!-- Footer content goes here -->
+    
   </footer>
 </body>
 
